--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dependencies": {
         "@codingame/monaco-vscode-editor-service-override": "1.83.16",
         "@codingame/monaco-vscode-keybindings-service-override": "1.83.16",
+        "@types/lodash": "^4.17.16",
         "@types/lowdb": "^1.0.15",
         "async-mutex": "^0.5.0",
         "axios": "^1.7.7",
@@ -43,7 +44,8 @@
         "langium": "~3.0.0",
         "lodash": "^4.17.21",
         "lowdb": "^7.0.1",
-        "made-report-lib": "^0.0.15",
+        "made-report-lib": "^0.0.20",
+        "made-report-lib-test": "^0.0.21",
         "monaco-editor": "npm:@codingame/monaco-editor-treemended@1.83.16",
         "monaco-editor-workers": "~0.44.0",
         "monaco-editor-wrapper": "~3.5.0",
@@ -57,12 +59,12 @@
         "@typescript-eslint/eslint-plugin": "~6.4.1",
         "@typescript-eslint/parser": "~6.4.1",
         "concurrently": "~8.2.1",
-        "esbuild": "~0.19.2",
+        "esbuild": "^0.25.4",
         "eslint": "~8.47.0",
         "langium-cli": "~3.0.0",
         "typescript": "~5.1.6",
-        "vite": "~4.4.11",
-        "vitest": "~1.0.0",
+        "vite": "^6.3.5",
+        "vitest": "^3.1.3",
         "vscode": "npm:@codingame/monaco-vscode-api@1.83.16"
     },
     "displayName": "MADE - Leds",
